# buck2-playground

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: affected-job.yml  affected.yml  profile.yml  release.yml
buckconfig.d/: re.cache.example
build_defs/: macros.bzl  php_project.bzl  py_library.bzl  quality.bzl  ts_project.bzl
build_defs/php/: BUCK  composer.bzl  php_binary.bzl  php_library.bzl  php_project.bzl  php_test.bzl  remote_toolchain.bzl  toolchain.bzl
common/profiles/: backend.json  frontend.json  infra.json  jvm.json  ml.json
common/sparo-profiles/: backend.json  frontend.json  infra.json  jvm.json  ml.json
docs/: ci-affected-design.md  deploy.md  interview-prep.md  js-project-quickstart.md  perf-tuning.md  php-toolchain.md  production-readiness.md  quality-convention.md  sparse-checkout-playbook.md
docs/curriculum/: 01-foundations-week1.md  02-exercise-targets.md
docs/onboarding/: template-per-language.md
domains/api/: BUCK
domains/api/python/: BUCK  main.py  pyproject.toml  requirements-dev.txt
domains/api/python/scripts/: run_pytest.sh
domains/api/python/src/: app.py  server.py  util.py
domains/api/python/tests/: test_app.py
domains/backend/: BUCK
domains/infra/: BUCK
domains/jvm/: BUCK
domains/ml/: BUCK
libs/monorepo-tooling-rust/: Cargo.toml
libs/monorepo-tooling-rust/src/: cli.rs  core.rs  main.rs
scripts/: affected_targets.sh  build_php_artifact.sh  compute_sparse_dirs.sh  profile_targets.sh  run_affected.sh  sparse-checkout.sh
toolchains/: BUCK
(+81 files in other folders)
